--- a/app/quiz/location-nature/css/style.css
+++ b/app/quiz/location-nature/css/style.css
@@ -152,13 +152,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #tutorial{
-    margin:0px 50px 0px 50px;
+ margin:0px 50px 0px 50px;
+ display:none;
 }
 
 
 #tutorial2{
-    margin:0px 50px 0px 50px;
+ margin:0px 50px 0px 50px;
+ display:none;
 }
+
 
 
 hr {
