--- a/app/geo-search/css/main.css
+++ b/app/geo-search/css/main.css
@@ -1,3 +1,13 @@
+html, body {
+  margin: 0px;
+  padding: 0px;
+}
+
 #globus button {
   z-index: 9999 !important;
+}
+
+#radius {
+  float: left;
+  margin: 3px;
 }
