help links in UI

--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -19,6 +19,11 @@
   /*border: 1px solid #000;*/
 }
 
+.doclink {
+  float: right;
+  margin-right: 1em;
+}
+
 #aichat {
   background: #fbfaf10;
 }
