--- a/app/explore2/libs/lc/css/lc_lightbox.css
+++ b/app/explore2/libs/lc/css/lc_lightbox.css
@@ -13,6 +13,7 @@ div#status {
   display: none;
   position: absolute;
   color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   z-index: 999;
   top: 4em;
   left: 1em;
