--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -2346,11 +2346,9 @@ h1 {
 }
 
 #srsearch {
-  width: 70%;
+  width: 50%;
   font-size: 110%;
-  /*
-  font-size: 1.5rem;
-  */
+  /* font-size: 1.5rem; */
   height: initial;
   padding: 5px 5px 2px 5px;
   margin-left: 10px;
