--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -2389,13 +2389,13 @@ h1 {
   background-color: #fbfaf9;
 }
 
-#search-in, #sortby {
+#search-in, #sortby, #filterby {
   width: fit-content;
   max-width: 150px;
   margin-right: 0.3em;
   padding: 0rem 0.1rem;
   display: inline;
-  font-size: 100%;
+  /*font-size: 1.2rem;*/
 }
 
 #search-options::before {
