--- a/app/orcid/css/main.css
+++ b/app/orcid/css/main.css
@@ -101,8 +101,14 @@ div.material-table .table-header {
 }
 
 div.material-table .table-header .actions {
+  /*
   display: -webkit-flex;
   margin-left: auto;
+  */
+
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 div.material-table .table-header .btn-flat {
