result summary chart

--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -2649,13 +2649,16 @@ body {
 */
 
 .pieChart {
+  /*
   position: absolute;
   width: 450px;
   height: 450px;
   top: 50%;
   left: 50%;
   margin: -225px 0 0 -225px;
+  */
 }
+
 .pieTip {
   position: absolute;
   float: left;
