--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -2429,8 +2429,9 @@ h1 {
   content: "";
 }
 
-input#year-range-start, input#year-range-end {
-  width: 3em;
+.date-input {
+  width: 8em !important;
+  margin-right: 1em !important;
 }
 
 #language {
