--- a/app/wikipedia/css/main.css
+++ b/app/wikipedia/css/main.css
@@ -2165,7 +2165,7 @@ body.rtl main.explore {
     display: none;
   }
 
-  #newTab, #printPage, #showAI {  /* #gotoVideo */
+  #newTab, #printPage, #showAI, #gotoWikipedia, #gotoWikidata {  /* #gotoVideo */
     display: none;
   }
 
