--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -3609,7 +3609,7 @@ input:not([type]), input[type="text"]:not(.browser-default), input[type="passwor
 
   .overflow-container {
     padding-bottom: 13rem;
-    margin-to:3rem;
+    margin-top:3rem;
   }
 
   .search-option-label {
