--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -937,9 +937,9 @@ mark, .highlight, li em, .mv-extra-desc > em, .mv-extra-desc > .searchmatch, det
 
 .datasource-set-label {
   float: right;
-  font-size: 0.3rem;
-  margin-right: 1em;
-  padding: 0em 2em;
+  font-size: 70%;
+  padding: 0em 1em 0em 0em;
+  text-wrap: nowrap;
 }
 
 /* TODO: do this from datasoures.js */
@@ -2413,6 +2413,9 @@ h1 {
 
 #search-options select {
   font-size: larger;
+  background: inherit;
+  border: 2px solid #0000000a;
+  border-radius: 0.3em;
 }
 
 #search-in, #sortby, #filterby,
