--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -24,6 +24,11 @@
   margin-right: 1em;
 }
 
+.doclink.nofloat {
+  float: none !important;
+  margin-left: 1em;
+}
+
 /* presentation revealjs */
 
 .reveal .controls .controls-arrow {
