--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -936,7 +936,7 @@ mark, .highlight, li em, .mv-extra-desc > em, .mv-extra-desc > .searchmatch, det
 }
 
 .datasource-description {
-  display: none;
+  /*display: none;*/
   font-size: smaller;
 }
 
@@ -2448,6 +2448,18 @@ h1 {
   background: inherit;
   border: 2px solid #0000000a;
   border-radius: 0.3em;
+}
+
+/* Webkit-hack to not show the ugly select-shadows */
+#search-options select {
+  -webkit-appearance: none;
+  /*
+  -moz-appearance: none;
+  appearance: none;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='black'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+  background-size: 1em;
+  background-position: calc(100% - 1em) center;
+  */
 }
 
 #search-in, #sortby, #filterby,
