--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -2449,10 +2449,10 @@ h1 {
   background: inherit;
   border: 2px solid #0000004f;
   border-radius: 0.3em;
+  margin-right: 0.3em;
 }
 
-#search-in, #sortby, #filterby,
-#year-range-start, #year-range-end {
+#search-in, #sortby, #filterby, #year-range-start, #year-range-end, #batch-size {
   width: fit-content;
   max-width: 25%;
   margin-right: 0.3em;
