graph sidebar mode

--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -19,6 +19,101 @@
   /*border: 1px solid #000;*/
 }
 
+/* cytoscape styling */
+.my-cy {
+  width: 100%;
+  height: 100%;
+}
+
+.my-cy-node {
+  background-color: #fbfaf9;
+  border: 4px solid #0000006b;
+  border-radius: 1.5em;
+
+}
+
+/* cytoscape zoom levels */
+[data-zoom="10"] {
+  .article-title { font-size: 100%; }
+}
+
+[data-zoom="9"] {
+  .article-title { font-size: 150%; }
+}
+
+[data-zoom="8"] {
+  .topic-tts-buttons { display: none !important }
+  .summary, .medialinks, .topic-tts-buttons { display: none }
+  .article-title { font-size: 200%; }
+}
+
+[data-zoom="7"] {
+  .topic-tts-buttons { display: none !important }
+  .summary, .medialinks, .topic-tts-buttons { display: none }
+  .article-title { font-size: 250%; }
+}
+
+[data-zoom="6"] {
+  .topic-tts-buttons { display: none }
+  .summary, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 300%; }
+  .highlight { background-color: transparent !important; }
+}
+
+[data-zoom="5"] {
+  .summary, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 350%; }
+  .highlight { background-color: transparent !important; }
+}
+
+[data-zoom="4"] {
+  .summary, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 400%; }
+  .highlight { background-color: transparent !important; }
+}
+
+[data-zoom="3"] {
+  .summary, .topic-description, .summary-thumb, .audio-widget, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 450%; }
+  .highlight { background-color: transparent !important; }
+}
+
+[data-zoom="2"] {
+  .summary, .article-title-icon, .topic-description, .summary, .summary-thumb, .audio-widget, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 500%; }
+  .highlight { background-color: transparent !important; }
+}
+
+[data-zoom="1"] {
+  .topic, .article-title-icon, .topic-description, .summary, .summary-thumb, .audio-widget, .medialinks, .topic-tts-buttons { display: none !important }
+  .article-title { font-size: 550%; }
+  .highlight { background-color: transparent !important; }
+  .my-cy-node { background-color: transparent !important; }
+  /*.entry { display: none !important; }*/
+}
+
+[data-zoom="0"] {
+  .topic, .article-title-icon, .topic-description, .summary, .summary-thumb, .audio-widget, .medialinks, .topic-tts-buttons { display: none }
+  .article-title { font-size: 600%; }
+  .highlight { background-color: transparent !important; }
+  .my-cy-node { background-color: #000 !important; }
+  .entry { display: none !important; }
+}
+
+.my-cy-node:selected {
+  overlay-color: blue;
+  overlay-opacity: 0.5;
+  overlay-padding: 5;
+}
+
+/*
+.my-cy-node.theme-lattice .summary-thumb {
+  padding-left: 0rem;
+  width: 100%;
+}
+
+/* end cytoscape styling */
+
 .doclink {
   float: right;
   margin-right: 1em;
