--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -21,8 +21,9 @@
 
 /* cytoscape styling */
 .my-cy {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  background-color:#fbfaf9;
 }
 
 .my-cy-node {
