--- a/app/explore2/css/conzept/main.css
+++ b/app/explore2/css/conzept/main.css
@@ -49,16 +49,24 @@
 }
 
 .cy-button {
+
   position: absolute;
-  top: 1em;
-}
+  top: 0.5em;
+  padding: 0.57em;
+  background: #ffffffa8;
 
-#my-cy-fullscreen.cy-button {
-  left: 1em;
-}
+  #my-cy-fullscreen {
+    left: 0.5em;
+  }
 
-#my-cy-fetch-more.cy-button {
-  left: 3em;
+  #my-cy-fit-to-view {
+    left: 2.5em;
+  }
+
+  #my-cy-fetch-more {
+    left: 4.5em;
+  }
+
 }
 
 .my-cy-node:selected {
